# classic

./: LICENSE  pyproject.toml
classic/: main.py
