[tool.poetry]
name = "classic"
version = "0.1.0"
description = ""
authors = ["ejgm99 <erickjgomez99@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
classic = "classic.main:app"

[tool.poetry.dependencies]
python = "^3.13"
typer = "^0.15.1"
jira = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
